# neurosys

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  full_scale.yaml  smoke.yaml  temporal_full_scale.yaml  temporal_hybrid.yaml  temporal_smoke.yaml
docs/: Integrating LLMs into AIOps - Integrating LLMs into AIOps.csv  NEUROSYS_TECHNICAL_DOCUMENTATION.md
experiments/: run_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  causal.py  counterfactual.py  failure_typing.py  latent.py  trajectory.py
src/api/: __init__.py  schemas.py  server.py  service.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/features/: __init__.py  bag_of_events.py  temporal_vectorizer.py
src/models/: __init__.py  baselines.py  temporal_vae.py  vae.py
src/preprocessing/: __init__.py  drain_parser.py  hdfs.py  sequence_splits.py  synthetic.py
src/utils/: io.py
