[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosys"
version = "0.1.0"
description = "NeuroSys: VAE-based AIOps framework for distributed system behavior modeling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NeuroSys Research Team" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "networkx>=3.2",
  "pyyaml>=6.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "umap-learn>=0.5"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
